--- a/frontend/src/episode/episode.scss
+++ b/frontend/src/episode/episode.scss
@@ -1,8 +1,8 @@
-show-list {
+episode-list {
     display: block;
 }
 
-.show-list-item {
+.episode-list-item {
     position: relative;
     display: flex;
     align-items: center;
@@ -36,6 +36,6 @@ show-list {
     }
 }
 
-.show-name {
+.episode-title {
     flex: 1;
 }
