--- a/frontend/src/episode/episode-list.component.html
+++ b/frontend/src/episode/episode-list.component.html
@@ -1,3 +1,8 @@
 <div class="episode-list">
-    <div class="episode-list-item" *ngFor="let episode of episodes">{{episode.title}}</div>
+    <div class="episode-list-item" *ngFor="let episode of episodes">
+        <div class="episode-title">{{episode.title}}</div>
+        <button class="btn remove-button" (click)="archiveEpisode(episode)">
+            <i class="fa fa-trash-o"></i>
+        </button>
+    </div>
 </div>
