--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,12 +1,59 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
-@import 'book/book';
-@import 'author/author';
+@import '../node_modules/font-awesome/scss/font-awesome';
+@import 'show/show';
+@import 'episode/episode';
+
 body {
+    background-color: #f1f1f1;
     font-family: "Helvetica Neue",sans-serif;
     box-sizing: border-box;
 }
 
 .container {
     position: relative;
+}
+
+.title-bar {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 20px;
     padding-top: 40px;
+    background-color: white;
+    box-shadow: 2px 2px 3px rgba(0,0,0,0.25);
+}
+
+.main-title-container {
+    flex: 1;
+}
+
+.main-title {
+    font-size: 4.5em;
+    color: rgba(0, 0, 0, 0.25);
+    &:hover, &:active, &:focus {
+        color: rgba(0, 0, 0, 0.33);
+        text-decoration: none;
+    }
+
+    @media (max-width: 600px) {
+        font-size: 2.5em;
+    }
+}
+
+.navigation-link {
+    display: inline-block;
+    padding: 10px 15px;
+
+    @media (max-width: 600px) {
+        font-size: 0.8em;
+    }
+}
+
+.clearfix {
+    &:before, &:after {
+        content: " ";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
 }
