Menu separated to own component, accent colors and styling organization

--- a/frontend/src/app.component.html
+++ b/frontend/src/app.component.html
@@ -1,12 +1,4 @@
-<div class="title-bar">
-    <div class="container">
-        <div class="main-title-container">
-            <a class="main-title h1" routerLink="/">TorrFeed</a>
-        </div>
-        <a class="navigation-link" routerLink="/" routerLinkActive="active">Episodes</a>
-        <a class="navigation-link" routerLink="/shows" routerLinkActive="active">Shows</a>
-    </div>
-</div>
+<top-menu></top-menu>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
