--- a/frontend/src/episode/episode-list.component.html
+++ b/frontend/src/episode/episode-list.component.html
@@ -1,6 +1,6 @@
 <div class="episode-list">
-    <div class="episode-list-item" *ngFor="let episode of episodes">
-        <div class="episode-title">{{episode.title}}</div>
+    <div class="episode-list-item list-item-card" *ngFor="let episode of episodes">
+        <div class="list-item-title">{{episode.title}}</div>
         <button class="btn remove-button" (click)="archiveEpisode(episode)">
             <i class="fa fa-trash-o"></i>
         </button>
