--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,59 +1,75 @@
+$accent-color: #E5373A;
+$accent-color-light: #E57373;
+$accent-color-dark: #B71C1C;
+$black: #333;
+
+@import url('https://fonts.googleapis.com/css?family=Dosis:300,400,600|Roboto:300,400');
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import '../node_modules/font-awesome/scss/font-awesome';
 @import 'show/show';
 @import 'episode/episode';
+@import 'menu/menu';
 
 body {
     background-color: #f1f1f1;
-    font-family: "Helvetica Neue",sans-serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    color: $black;
 }
 
 .container {
     position: relative;
 }
 
-.title-bar {
+.list-item-card {
+    position: relative;
     display: flex;
-    align-items: flex-end;
-    margin-bottom: 20px;
-    padding-top: 40px;
+    align-items: center;
+    margin: 10px 0;
+    padding: 10px 10px 10px 20px;
     background-color: white;
-    box-shadow: 2px 2px 3px rgba(0,0,0,0.25);
-}
+    border-radius: 4px;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
 
-.main-title-container {
-    flex: 1;
-}
-
-.main-title {
-    font-size: 4.5em;
-    color: rgba(0, 0, 0, 0.25);
-    &:hover, &:active, &:focus {
-        color: rgba(0, 0, 0, 0.33);
-        text-decoration: none;
-    }
-
-    @media (max-width: 600px) {
-        font-size: 2.5em;
-    }
-}
-
-.navigation-link {
-    display: inline-block;
-    padding: 10px 15px;
-
-    @media (max-width: 600px) {
-        font-size: 0.8em;
-    }
-}
-
-.clearfix {
-    &:before, &:after {
-        content: " ";
-        display: table;
-    }
+    /* Pre-render the hover shadow, but hide it- big performance boost */
     &:after {
-        clear: both;
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+        opacity: 0;
+        transition: opacity 0.25s ease-in-out;
+        z-index: -1;
+    }
+    &:hover:after {
+        opacity: 1;
+    }
+
+    .list-item-title {
+        flex: 1;
+    }
+
+    .remove-button {
+        transition: all 0.25s ease-in-out;
+        &:hover {
+            cursor: pointer;
+            background-color: $accent-color;
+            color: white;
+        }
+        &:active {
+            background-color: $accent-color-dark;
+            color: white;
+        }
+    }
+}
+
+a {
+    color: $accent-color;
+    &:hover, &:active, &:focus {
+        color: $accent-color-dark;
+        text-decoration: none;
     }
 }
