--- a/frontend/src/menu/menu.component.html
+++ b/frontend/src/menu/menu.component.html
@@ -1,8 +1,10 @@
 <div class="top-menu">
     <div class="container">
-        <a class="main-title h1" routerLink="/episodes">
-            <span class="title-emphasis">Torr</span>Feed
-        </a>
+        <div class="main-title-container">
+            <a class="main-title" routerLink="/episodes">
+                <span class="title-emphasis">Torr</span><span>Feed</span>
+            </a>
+        </div>
         <div class="navigation-links-container">
             <a class="navigation-link" routerLink="/episodes" routerLinkActive="active">Episodes</a>
             <a class="navigation-link" routerLink="/shows" routerLinkActive="active">Shows</a>
