--- a/frontend/src/show/show-list.component.html
+++ b/frontend/src/show/show-list.component.html
@@ -8,8 +8,8 @@
 <div class="show-list">
     <div class="show-list-item list-item-card" *ngFor="let show of shows">
         <div class="list-item-title">{{show.name}}</div>
-        <button class="btn remove-button" (click)="deleteShow(show)">
-            <i class="fa fa-trash-o"></i>
+        <button class="remove-button" (click)="deleteShow(show)">
+            <i class="fa fa-remove"></i>
         </button>
     </div>
 </div>
