--- a/frontend/src/episode/episode-list.component.html
+++ b/frontend/src/episode/episode-list.component.html
@@ -1,8 +1,11 @@
 <div class="episode-list">
-    <div class="episode-list-item list-item-card" *ngFor="let episode of episodes">
-        <div class="list-item-title">{{episode.title}}</div>
-        <button class="remove-button" (click)="archiveEpisode(episode)">
-            <i class="fa fa-remove"></i>
-        </button>
+    <div class="episode-list-item" *ngFor="let episode of episodes">
+        <span class="episode-date">{{getFormattedDate(episode.date)}}</span>
+        <div class="list-item-card">
+            <div class="list-item-title">{{episode.title}}</div>
+            <button class="remove-button" (click)="archiveEpisode(episode)">
+                <i class="fa fa-remove"></i>
+            </button>
+        </div>
     </div>
 </div>
