--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -2,6 +2,9 @@ $accent-color: #E5373A;
 $accent-color-light: #E57373;
 $accent-color-dark: #B71C1C;
 $black: #333;
+$gray-dark: #999;
+$gray-light: #CCC;
+$gray-lighter: #F1F1F1;
 
 @import url('https://fonts.googleapis.com/css?family=Dosis:300,400,600|Roboto:300,400');
 @import '../node_modules/bootstrap/scss/bootstrap';
@@ -11,7 +14,7 @@ $black: #333;
 @import 'menu/menu';
 
 body {
-    background-color: #f1f1f1;
+    background-color: $gray-lighter;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     color: $black;
@@ -33,7 +36,7 @@ button, input, optgroup, select, textarea {
     padding: 10px 10px 10px 20px;
     background-color: white;
     border-radius: 4px;
-    box-shadow: 1px 1px 2px rgba(0,0,0,0.10);
+    box-shadow: 1px 1px 2px $gray-light;
 
     /* Pre-render the hover shadow, but hide it- big performance boost */
     &:after {
@@ -43,7 +46,7 @@ button, input, optgroup, select, textarea {
         top: 0;
         width: 100%;
         height: 100%;
-        box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+        box-shadow: 2px 2px 5px $gray-dark;
         opacity: 0;
         transition: opacity 0.25s ease-in-out;
         z-index: -1;
@@ -64,7 +67,7 @@ button, input, optgroup, select, textarea {
     appearance: none;
     align-self: flex-start;
     margin-left: 10px;
-    color: #ccc;
+    color: $gray-light;
     background: none;
     border: none;
     border-radius: 4px;
@@ -83,6 +86,8 @@ button, input, optgroup, select, textarea {
 a {
     color: $black;
     text-decoration: none !important;
+    transition: color 0.25s ease-in-out;
+
     &:hover, &:active {
         color: $accent-color;
     }
