--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,97 +1,9 @@
-$accent-color: #E5373A;
-$accent-color-light: #E57373;
-$accent-color-dark: #B71C1C;
-$black: #333;
-$gray-dark: #999;
-$gray-light: #CCC;
-$gray-lighter: #F1F1F1;
-
 @import url('https://fonts.googleapis.com/css?family=Dosis:300,400,600|Roboto:300,400');
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import '../node_modules/font-awesome/scss/font-awesome';
+@import 'shared/variables';
+@import 'shared/splash-screen';
+@import 'shared/shared';
 @import 'show/show';
 @import 'episode/episode';
 @import 'menu/menu';
-
-body {
-    background-color: $gray-lighter;
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    color: $black;
-}
-
-button, input, optgroup, select, textarea {
-    font-family: 'Roboto', sans-serif;
-}
-
-.container {
-    position: relative;
-}
-
-.list-item-card {
-    position: relative;
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-    padding: 10px 10px 10px 20px;
-    background-color: white;
-    border-radius: 4px;
-    box-shadow: 1px 1px 2px $gray-light;
-
-    /* Pre-render the hover shadow, but hide it- big performance boost */
-    &:after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        box-shadow: 2px 2px 5px $gray-dark;
-        opacity: 0;
-        transition: opacity 0.25s ease-in-out;
-        z-index: -1;
-    }
-    &:hover:after {
-        opacity: 1;
-    }
-
-    .list-item-title {
-        flex: 1;
-        @media (max-width: 600px) {
-            font-size: 0.8em;
-        }
-    }
-}
-
-.remove-button {
-    appearance: none;
-    align-self: flex-start;
-    margin-left: 10px;
-    color: $gray-light;
-    background: none;
-    border: none;
-    border-radius: 4px;
-    transition: all 0.25s ease-in-out;
-    &:hover {
-        cursor: pointer;
-        background-color: $accent-color;
-        color: white;
-    }
-    &:active {
-        background-color: $accent-color-dark;
-        color: white;
-    }
-}
-
-a {
-    color: $black;
-    text-decoration: none !important;
-    transition: color 0.25s ease-in-out;
-
-    &:hover, &:active {
-        color: $accent-color;
-    }
-    &:focus {
-        color: $black;
-    }
-}
