Add mirror-link and show-detail-link to episode list items

--- a/frontend/src/episode/episode-list.component.html
+++ b/frontend/src/episode/episode-list.component.html
@@ -2,8 +2,12 @@
     <div class="episode-list-item" *ngFor="let episode of episodes">
         <span class="episode-date">{{getFormattedDate(episode.date)}}</span>
         <div class="list-item-card">
+            <a class="episode-show-name" routerLink="/shows/{{episode.show['_id']}}" title="Show details">{{episode.show.name}}</a>
             <div class="list-item-title">
                 <a [href]="episode.directLink">{{episode.title}}</a>
+                <a [href]="sanitize(episode.magnet)" class="episode-magnet-link" title="magnet" *ngIf="episode.magnet">
+                    <i class="fa fa-magnet"></i>
+                </a>
             </div>
             <button class="remove-button" (click)="archiveEpisode(episode)">
                 <i class="fa fa-remove"></i>
