--- a/frontend/src/shared/shared.scss
+++ b/frontend/src/shared/shared.scss
@@ -28,7 +28,7 @@ a {
 
 .list-item-card {
     position: relative;
-    display: flex;
+    display: block;
     align-items: center;
     margin: 10px 0;
     padding: 10px 10px 10px 20px;
@@ -55,6 +55,7 @@ a {
 
     .list-item-title {
         flex: 1;
+        margin-right: 35px;
         @media (max-width: 600px) {
             font-size: 0.8em;
         }
@@ -62,9 +63,11 @@ a {
 }
 
 .remove-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
     appearance: none;
     align-self: flex-start;
-    margin-left: 10px;
     color: $gray-light;
     background: none;
     border: none;
