--- a/frontend/src/show/show.scss
+++ b/frontend/src/show/show.scss
@@ -1,3 +1,9 @@
 show-list {
     display: block;
 }
+
+.show-details-title {
+    display: block;
+    margin-left: 75px;
+    color: $gray-dark;
+}
