--- a/frontend/src/show/detail/show-detail.component.html
+++ b/frontend/src/show/detail/show-detail.component.html
@@ -1,4 +1,4 @@
 <div class="show-details">
-    <h3 class="show-details-title" *ngIf="show">{{show.name}}</h3>
+    <h4 class="show-details-title" *ngIf="show" [ngClass]="{'no-indent': !episodes || episodes.length === 0}">{{show.name}}</h4>
     <episode-list [episodes]="episodes" *ngIf="episodes"></episode-list>
 </div>
