--- a/frontend/src/episode/episode-list.component.html
+++ b/frontend/src/episode/episode-list.component.html
@@ -15,3 +15,6 @@
         </div>
     </div>
 </div>
+<div class="no-episodes-message" *ngIf="!episodes || episodes.length === 0">
+    There are no episodes here.
+</div>
